--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "doc": "docs"
   },
   "devDependencies": {
+    "animejs": "^3.2.1",
     "mermaid": "^10.9.1",
     "pagefind": "^1.1.0",
     "sass": "^1.76.0",
     "typescript": "^5.4.5",
     "vitepress": "1.3.4",
-    "vitepress-plugin-mermaid": "^2.0.16",
-    "animejs": "^3.2.1"
+    "vitepress-plugin-mermaid": "^2.0.16"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -33,6 +33,10 @@
         "@algolia/client-search",
         "search-insights"
       ]
-    }
+    },
+    "ignoredBuiltDependencies": [
+      "esbuild",
+      "vue-demi"
+    ]
   }
 }
